Fix floating button overlap

--- a/src/app/users/users.component.scss
+++ b/src/app/users/users.component.scss
@@ -2,4 +2,5 @@ button {
   bottom: 24px;
   position: fixed;
   right: 24px;
+  z-index: 999;
 }
